syntax = "proto3";
package data;

option java_multiple_files = true;
option optimize_for = SPEED;
option java_package = "com.mgwy.proto.data";


message PbAisPosition {
  optional int32 mmsi = 1;
  optional string navigational_status = 2;
  optional float latitude = 3;
  optional float longitude = 4;
  optional float rot = 5;
  optional float speed_over_ground = 6;
  optional float course_over_ground = 7;
  optional int32 heading = 8;
  optional string t_stamp = 9;
  optional string date = 10;
}